--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ default: &default
   adapter: postgresql
   encoding: unicode
   username: luca
-  password: <%= Rails.application.credentials.postgres[:password]
+  password: <%= Rails.application.credentials.postgres[:password]%>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 
