Create postgres farm_match_user role Add password Make changes to database.yml file to use farm_match_user

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: luca
-  password: <%= Rails.application.credentials.postgres[:password]%>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: farm_match_user
+  password: <%= Rails.application.credentials.postgres[:password]%>
+
 
 
 development:
