--- a/config/database.yml
+++ b/config/database.yml
@@ -3,14 +3,15 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: farm_match_user
-  password: <%= Rails.application.credentials.postgres[:password]%>
+
 
 
 
 development:
   <<: *default
   database: farm_match_interest_development
+  username: farm_match_user
+  password: <%= Rails.application.credentials.postgres[:password]%>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -18,7 +19,11 @@ development:
 test:
   <<: *default
   database: farm_match_interest_test
+  username: farm_match_user
+  password: <%= Rails.application.credentials.postgres[:password]%>
 
 production:
   <<: *default
   database: farm_match_interest_production
+  username: farm_match_user
+  password: <%= ENV["DATABASE_PASSWORD"] %>
